--- a/index.html
+++ b/index.html
@@ -43,11 +43,31 @@
     />
 
     <link rel="stylesheet" href="./css/index.css" />
+    <script defer src="./js/index.js"></script>
   </head>
 
   <body>
-    Hello
+    <!-- Header -->
+    <header>
+      <div class="inner">
+        <a href="/" class="logo">
+          <img src="./images/starbucks_logo.png" alt="Starbucks" />
+        </a>
 
-    <span class="material-icons"> file_upload </span>
+        <div class="sub-menu">
+          <ul class="menu">
+            <li><a href="/signin">Sign In</a></li>
+            <li><a href="javascript:void(0)">My Starbucks</a></li>
+            <li><a href="#">Customer Service & Ideas</a></li>
+            <li><a href="#">Find a Store</a></li>
+          </ul>
+
+          <div class="search">
+            <input type="text" />
+            <div class="material-icons">search</div>
+          </div>
+        </div>
+      </div>
+    </header>
   </body>
 </html>
